fix: enhance game card visibility and search functionality

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -70,6 +70,9 @@ option {
 	display: none;
 }
 
+.game-card.hidden {
+	display: none;
+}
 /* ====================== SCROLLBAR ====================== */
 ::-webkit-scrollbar {
 	width: 8px;
